Template Mobile Legend
Template mobile legends selesai dan terjadi perbaikan kepada headings

--- a/index.html
+++ b/index.html
@@ -20,38 +20,38 @@
         </div>
     </nav>
     <section class="hero">
-        <img style="width: 1000px;" src="/img/Frame 13.png" alt="banner">
+        <img style="width: 1000px;" src="/img/Frame 15.png" alt="banner">
     </section>
 
     <section class="topup">
         <h1>Top Up</h1>
         <div class="items">
-            <a href="">
+            <a href="ml.html">
                 <div>
                     <img style="width: 150px;" src="/img/Mobile legend.png" alt=mlbb>
                     <h3>Mobile Legend</h3>
                 </div>
             </a>
-            <a href="">
+            <a href="/valo.html">
                 <div>
                     <img style="width: 150px;" src="/img/VALORANT.jpeg" alt=valorant>
                     <h3>Valorant</h3>
                 </div>
             </a>
-            <a href="">
+            <a href="/gi.html">
                 <div>
                     <img style="width: 150px;" src="/img/Genshin Impact.webp" alt=genshin>
                     <h3>Genshin Impact</h3>
                 </div>
             </a>
-            <a href="">
+            <a href="/steam.html">
                 <div>
                     <img style="width: 150px;" src="/img/Steam.jpeg" alt=steam>
                     <h3>Steam</h3>
             
                 </div>
             </a>
-            <a href="">
+            <a href="/goplay.html">
                 <div>
                     <img style="width: 150px;" src="/img/Google Play Store.webp" alt=googleplay>
                     <h3>Google Play Store</h3>
