--- a/valo.html
+++ b/valo.html
@@ -31,7 +31,7 @@
         <section class="kategori">
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
@@ -40,7 +40,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
@@ -49,7 +49,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
@@ -58,7 +58,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
@@ -67,7 +67,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
@@ -76,7 +76,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
@@ -85,7 +85,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
@@ -94,7 +94,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
@@ -103,7 +103,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
@@ -112,7 +112,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
@@ -121,7 +121,16 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <h4>86 <em>(78+8)</em></h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 20.500</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
