sedikit perbauikan pada html valorant dan update Genshin

--- a/gi.html
+++ b/gi.html
@@ -19,5 +19,130 @@
         <!-- <a class="Login" href="">Login</a> -->
         </div>
     </nav>
-    
+    <section class="apk">
+        <section class="heroapk">
+            <img style="width: 125px;" src="/img/Genshin Impact.webp" alt="logogi">
+            <div class="cobaanhidup">
+                <h2> Genshin Impact Crystals </h2><br>
+                <h3> Deskripsi</h3>
+            </div>
+        </section>
+            <h1 style="margin-top: 30px;">Price List</h1>
+        <section class="kategori">
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>80</h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 13.000</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>330 <em>(300+30)</em></h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 64.000</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>1090 <em>(1980+110)</em></h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 190.000</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>2240 <em>(1980+260)</em></h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 410.500</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>3880 <em>(3280+600)</em></h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 632.000</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>8080 <em>(6480+1600)</em></h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 1.264.000</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>2x 8080 <em>(6480+1600)</em></h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 2.292.000</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>1xBotW</h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 64.000</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>2xBotW</h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 126.000</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>3xBotW</h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 190.000</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>4xBotW</h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 251.500</h2>
+                </div>
+            </div>
+            <div class="item"> 
+                <div class="tokengame">
+                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <h4>5xBotW</h4>
+                </div>
+                <div class="price">
+                    <h2>Rp. 314.500</h2>
+                </div>
+            </div>
+        </section>
+        <a class="whatsapp" href="https://wa.me/6285231719988" target="_blank">
+            <div>
+                <h2>Order Now</h2>
+                <img width="40px" src="/img/wa.svg" alt="whatsapp">
+            </div>
+        </a>
+    </section> 
 </body>
