--- a/valo.html
+++ b/valo.html
@@ -31,7 +31,7 @@
         <section class="kategori">
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>300</h4>
                 </div>
                 <div class="price">
@@ -40,7 +40,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>625</h4>
                 </div>
                 <div class="price">
@@ -49,7 +49,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>1125</h4>
                 </div>
                 <div class="price">
@@ -58,7 +58,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>1250</h4>
                 </div>
                 <div class="price">
@@ -67,7 +67,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>1650</h4>
                 </div>
                 <div class="price">
@@ -76,7 +76,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>2275</h4>
                 </div>
                 <div class="price">
@@ -85,7 +85,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>2775</em></h4>
                 </div>
                 <div class="price">
@@ -94,7 +94,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>3400</h4>
                 </div>
                 <div class="price">
@@ -103,7 +103,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>4525</h4>
                 </div>
                 <div class="price">
@@ -112,7 +112,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>5050</h4>
                 </div>
                 <div class="price">
@@ -121,7 +121,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>7000</h4>
                 </div>
                 <div class="price">
@@ -130,7 +130,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="diamond">
+                    <img width="30px" src="/img/valopoint.svg" alt="valopoint">
                     <h4>8650</h4>
                 </div>
                 <div class="price">
