--- a/ml.html
+++ b/ml.html
@@ -24,7 +24,9 @@
             <img style="width: 125px;" src="/img/Mobile legend.png" alt="logoml">
             <div class="cobaanhidup">
                 <h2> Mobile Legend Diamonds </h2><br>
-                <h3> Deskripsi</h3>
+                <h3> Top Up Mobile Legend Diamond legal cepat dan aman! 
+                    Ayo dapatkan skin impian mu saat ini juga dengan top up di sini!.
+                    Dapat Transaksi Via.....</h3>
             </div>
         </section>
             <h1 style="margin-top: 30px;">Price List</h1>
