--- a/valo.html
+++ b/valo.html
@@ -24,7 +24,8 @@
             <img style="width: 125px;" src="/img/VALORANT.jpeg" alt="logovalo">
             <div class="cobaanhidup">
                 <h2> Valorant Points </h2><br>
-                <h3> Deskripsi</h3>
+                <h3> Top Up Valorant Point legal cepat dan aman! Dapatkan skin senjata impian mu dengan top up di sini.
+                    Dapat Transaksi Via....</h3>
             </div>
         </section>
             <h1 style="margin-top: 30px;">Price List</h1>
