--- a/gi.html
+++ b/gi.html
@@ -24,7 +24,8 @@
             <img style="width: 125px;" src="/img/Genshin Impact.webp" alt="logogi">
             <div class="cobaanhidup">
                 <h2> Genshin Impact Crystals </h2><br>
-                <h3> Deskripsi</h3>
+                <h3> Top Up Genshin Imapct Crystal legal cepat dan aman! Top up sekarang juga dapatkan karakter yang kamu ingin kan.
+                    Dapat Transaksi Via....</h3>
             </div>
         </section>
             <h1 style="margin-top: 30px;">Price List</h1>
