--- a/gi.html
+++ b/gi.html
@@ -32,7 +32,7 @@
         <section class="kategori">
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>80</h4>
                 </div>
                 <div class="price">
@@ -41,7 +41,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>330 <em>(300+30)</em></h4>
                 </div>
                 <div class="price">
@@ -50,7 +50,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>1090 <em>(1980+110)</em></h4>
                 </div>
                 <div class="price">
@@ -59,7 +59,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>2240 <em>(1980+260)</em></h4>
                 </div>
                 <div class="price">
@@ -68,7 +68,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>3880 <em>(3280+600)</em></h4>
                 </div>
                 <div class="price">
@@ -77,7 +77,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>8080 <em>(6480+1600)</em></h4>
                 </div>
                 <div class="price">
@@ -86,7 +86,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>2x 8080 <em>(6480+1600)</em></h4>
                 </div>
                 <div class="price">
@@ -95,7 +95,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>1xBotW</h4>
                 </div>
                 <div class="price">
@@ -104,7 +104,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>2xBotW</h4>
                 </div>
                 <div class="price">
@@ -113,7 +113,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>3xBotW</h4>
                 </div>
                 <div class="price">
@@ -122,7 +122,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>4xBotW</h4>
                 </div>
                 <div class="price">
@@ -131,7 +131,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/valopoint.svg" alt="crystals">
+                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
                     <h4>5xBotW</h4>
                 </div>
                 <div class="price">
