--- a/steam.html
+++ b/steam.html
@@ -31,7 +31,7 @@
         <section class="kategori">
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>80</h4>
                 </div>
                 <div class="price">
@@ -40,7 +40,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>330 <em>(300+30)</em></h4>
                 </div>
                 <div class="price">
@@ -49,7 +49,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>1090 <em>(1980+110)</em></h4>
                 </div>
                 <div class="price">
@@ -58,7 +58,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>2240 <em>(1980+260)</em></h4>
                 </div>
                 <div class="price">
@@ -67,7 +67,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>3880 <em>(3280+600)</em></h4>
                 </div>
                 <div class="price">
@@ -76,7 +76,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>8080 <em>(6480+1600)</em></h4>
                 </div>
                 <div class="price">
@@ -85,7 +85,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>2x 8080 <em>(6480+1600)</em></h4>
                 </div>
                 <div class="price">
@@ -94,7 +94,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>1xBotW</h4>
                 </div>
                 <div class="price">
@@ -103,7 +103,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>2xBotW</h4>
                 </div>
                 <div class="price">
@@ -112,7 +112,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>3xBotW</h4>
                 </div>
                 <div class="price">
@@ -121,7 +121,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>4xBotW</h4>
                 </div>
                 <div class="price">
@@ -130,7 +130,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.webp" alt="crystals">
+                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
                     <h4>5xBotW</h4>
                 </div>
                 <div class="price">
