Update Price List ,Update Deskripsi
Perbaikan pada logo ikon price list google play card dan penambahan price list serta perbaikan deskripsi pada mobile legend, genshin impact, google play card, steam wallet, dan valorant

--- a/gi.html
+++ b/gi.html
@@ -25,7 +25,7 @@
             <div class="cobaanhidup">
                 <h2> Genshin Impact Crystals </h2><br>
                 <h3> Top Up Genshin Imapct Crystal legal cepat dan aman! Top up sekarang juga dapatkan karakter yang kamu ingin kan.
-                    Dapat Transaksi Via....</h3>
+                    Dapat Transaksi Via BCA Dana dan Gopay</h3>
             </div>
         </section>
             <h1 style="margin-top: 30px;">Price List</h1>
