--- a/goplay.html
+++ b/goplay.html
@@ -21,121 +21,85 @@
     </nav>
     <section class="apk">
         <section class="heroapk">
-            <img style="width: 125px;" src="/img/Genshin Impact.webp" alt="logogi">
+            <img style="width: 125px;" src="/img/Google Play Store.webp" alt="logogoplay">
             <div class="cobaanhidup">
                 <h2> Google Play Card </h2><br>
-                <h3> Top Up Genshin Imapct Crystal legal cepat dan aman! Top up sekarang juga dapatkan karakter yang kamu ingin kan.
-                    Dapat Transaksi Via....</h3>
+                <h3> Top Up Google Play Card legal cepat dan aman!
+                    Dapat Transaksi Via BCA Dana dan Gopay</h3>
             </div>
         </section>
             <h1 style="margin-top: 30px;">Price List</h1>
         <section class="kategori">
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>80</h4>
+                    <img width="30px" src="/img/goplay logo pc.png" alt="goplay">
+                    <h4>Rp. 5.000</h4>
                 </div>
                 <div class="price">
-                    <h2>Rp. 13.000</h2>
+                    <h2>Rp. 5.200</h2>
                 </div>
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>330 <em>(300+30)</em></h4>
+                    <img width="30px" src="/img/goplay logo pc.png" alt="goplay">
+                    <h4>Rp. 10.000</h4>
                 </div>
                 <div class="price">
-                    <h2>Rp. 64.000</h2>
+                    <h2>Rp. 10.500</h2>
                 </div>
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>1090 <em>(1980+110)</em></h4>
+                    <img width="30px" src="/img/goplay logo pc.png" alt="goplay">
+                    <h4>Rp. 20.000</h4>
                 </div>
                 <div class="price">
-                    <h2>Rp. 190.000</h2>
+                    <h2>Rp. 20.700</h2>
                 </div>
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>2240 <em>(1980+260)</em></h4>
+                    <img width="30px" src="/img/goplay logo pc.png" alt="goplay">
+                    <h4>Rp. 50.000</h4>
                 </div>
                 <div class="price">
-                    <h2>Rp. 410.500</h2>
+                    <h2>Rp. 51.800</h2>
                 </div>
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>3880 <em>(3280+600)</em></h4>
+                    <img width="30px" src="/img/goplay logo pc.png" alt="goplay">
+                    <h4>Rp. 100.000</h4>
                 </div>
                 <div class="price">
-                    <h2>Rp. 632.000</h2>
+                    <h2>Rp. 103.500</h2>
                 </div>
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>8080 <em>(6480+1600)</em></h4>
+                    <img width="30px" src="/img/goplay logo pc.png" alt="goplay">
+                    <h4>Rp. 150.000</h4>
                 </div>
                 <div class="price">
-                    <h2>Rp. 1.264.000</h2>
+                    <h2>Rp. 155.200</h2>
                 </div>
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>2x 8080 <em>(6480+1600)</em></h4>
+                    <img width="30px" src="/img/goplay logo pc.png" alt="goplay">
+                    <h4>Rp. 300.000</h4>
                 </div>
                 <div class="price">
-                    <h2>Rp. 2.292.000</h2>
+                    <h2>Rp. 310.300</h2>
                 </div>
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>1xBotW</h4>
+                    <img width="30px" src="/img/goplay logo pc.png" alt="goplay">
+                    <h4>Rp. 500.000</h4>
                 </div>
                 <div class="price">
-                    <h2>Rp. 64.000</h2>
-                </div>
-            </div>
-            <div class="item"> 
-                <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>2xBotW</h4>
-                </div>
-                <div class="price">
-                    <h2>Rp. 126.000</h2>
-                </div>
-            </div>
-            <div class="item"> 
-                <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>3xBotW</h4>
-                </div>
-                <div class="price">
-                    <h2>Rp. 190.000</h2>
-                </div>
-            </div>
-            <div class="item"> 
-                <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>4xBotW</h4>
-                </div>
-                <div class="price">
-                    <h2>Rp. 251.500</h2>
-                </div>
-            </div>
-            <div class="item"> 
-                <div class="tokengame">
-                    <img width="30px" src="/img/googleplaycard.png" alt="crystals">
-                    <h4>5xBotW</h4>
-                </div>
-                <div class="price">
-                    <h2>Rp. 314.500</h2>
+                    <h2>Rp. 517.100</h2>
                 </div>
             </div>
         </section>
