--- a/ml.html
+++ b/ml.html
@@ -26,7 +26,7 @@
                 <h2> Mobile Legend Diamonds </h2><br>
                 <h3> Top Up Mobile Legend Diamond legal cepat dan aman! 
                     Ayo dapatkan skin impian mu saat ini juga dengan top up di sini!.
-                    Dapat Transaksi Via.....</h3>
+                    Dapat Transaksi Via BCA Dana dan Gopay</h3>
             </div>
         </section>
             <h1 style="margin-top: 30px;">Price List</h1>
