--- a/steam.html
+++ b/steam.html
@@ -24,7 +24,8 @@
             <img style="width: 125px;" src="/img/Steam.jpeg" alt="logosteam">
             <div class="cobaanhidup">
                 <h2> Steam Wallet </h2><br>
-                <h3> Deskripsi </h3>
+                <h3> Top Up Steam Wallet legal cepat dan aman! Dapatkan berbagai game saat itu juga dengan top up di KnH.
+                    Dapat Transaksi Via BCA Dana dan Gopay </h3>
             </div>
         </section>
             <h1 style="margin-top: 30px;">Price List</h1>
