--- a/valo.html
+++ b/valo.html
@@ -25,7 +25,7 @@
             <div class="cobaanhidup">
                 <h2> Valorant Points </h2><br>
                 <h3> Top Up Valorant Point legal cepat dan aman! Dapatkan skin senjata impian mu dengan top up di sini.
-                    Dapat Transaksi Via....</h3>
+                    Dapat Transaksi Via BCA Dana dan Gopay</h3>
             </div>
         </section>
             <h1 style="margin-top: 30px;">Price List</h1>
