--- a/gi.html
+++ b/gi.html
@@ -95,7 +95,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/img/botw.webp" alt="crystals">
                     <h4>1xBotW</h4>
                 </div>
                 <div class="price">
@@ -104,7 +104,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/img/botw.webp" alt="crystals">
                     <h4>2xBotW</h4>
                 </div>
                 <div class="price">
@@ -113,7 +113,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/img/botw.webp" alt="crystals">
                     <h4>3xBotW</h4>
                 </div>
                 <div class="price">
@@ -122,7 +122,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/img/botw.webp" alt="crystals">
                     <h4>4xBotW</h4>
                 </div>
                 <div class="price">
@@ -131,7 +131,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/img/botw.webp" alt="crystals">
                     <h4>5xBotW</h4>
                 </div>
                 <div class="price">
