--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
+    <nav style="background-color: black;">
         <a href="/index.html">
             <div class="logo"> KNH EMPORIUM </div>
         </a>
@@ -24,7 +24,7 @@
     </section>
 
     <section class="topup">
-        <h1>Top Up</h1>
+        <h1 style="margin-left: 60px;">Top Up</h1>
         <div class="items">
             <a href="ml.html">
                 <div>
