--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </nav>
     <section class="hero">
-        <img style="width: 1000px;" src="/asset/img/Frame 15.png" alt="banner">
+        <img style="width: 1000px;" src="/asset/img/Banner.svg" alt="banner">
     </section>
 
     <section class="topup">
