--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
 <body>
     <nav>
         <a href="/index.html">
-            <div class="logo"> KNH EMPORIUM </div>
+            <div class="logo"> 
+                <img style="width: 35px;" src="/asset/img/Logo.svg" alt="logoknh">
+                KNH EMPORIUM 
+            </div>
         </a>
         <div class="nav-items">
-        <a href="https://www.instagram.com/knh.emporium/" target="_blank"><img style="width: 35px;" src="/asset/img/cs.png" alt=language></a>
-        <!-- <a class="Login" href="">Login</a> -->
+        <a href="https://www.instagram.com/knh.emporium/" target="_blank">
+            <img style="width: 35px;" src="/asset/img/cs.png" alt=language>
+        </a>
         </div>
     </nav>
     <section class="hero">
-        <img style="width: 1000px;" src="/asset/img/Banner.svg" alt="banner">
+        <div class="banner">
+            <img style="width: 1000px;" src="/asset/img/Hero alt (1).svg" alt="banner">
+        </div>
     </section>
 
     <section class="topup">
