--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <section class="hero">
         <div class="banner">
-            <img style="width: 1000px;" src="/asset/img/Hero alt (1).svg" alt="banner">
+            <img style="width: 1000px;" src="/asset/img/Hero alt.svg" alt="banner">
         </div>
     </section>
 
