--- a/pages/steam.html
+++ b/pages/steam.html
@@ -12,11 +12,15 @@
 <body>
     <nav>
         <a href="/index.html">
-            <div class="logo"> KNH EMPORIUM </div>
+            <div class="logo"> 
+                <img style="width: 35px;" src="/asset/img/Logo.svg" alt="logoknh">
+                KNH EMPORIUM 
+            </div>
         </a>
         <div class="nav-items">
-        <a href="https://www.instagram.com/knh.emporium/" target="_blank"><img style="width: 35px;" src="/asset/img/cs.png" alt=language></a>
-        <!-- <a class="Login" href="">Login</a> -->
+        <a href="https://www.instagram.com/knh.emporium/" target="_blank">
+            <img style="width: 35px;" src="/asset/img/cs.png" alt=language>
+        </a>
         </div>
     </nav>
     <section class="apk">
